flacparse: don't error out on invalid minimum_blocksize value in streaminfo header

We don't use it, so may just as well accept an invalid value
of 0 here, which is likely inconsequential anyway.

https://bugzilla.gnome.org/show_bug.cgi?id=650691